objects/fpro__FieldPro_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>fpro__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access App</fullName>
                </value>
                <value>
                    <fullName>Run Service</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fpro__Created_Date_Custom__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date (Custom)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Org_Id__c</fullName>
        <description>Customer&apos;s Org Id</description>
        <inlineHelpText>Customer&apos;s Org Id</inlineHelpText>
        <label>Org Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Package_Version__c</fullName>
        <label>Package Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__User_Email__c</fullName>
        <label>User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FieldPro Analytics</label>
    <listViews>
        <fullName>fpro__All</fullName>
        <columns>NAME</columns>
        <columns>fpro__Org_Id__c</columns>
        <columns>fpro__Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FieldPro Analytics-{000000}</displayFormat>
        <label>FieldPro Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldPro Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>